# ru-http-sync

./: Cargo.toml  LICENSE  README.md  README_ZH.md  another_file.md  install.bat  test.txt  test_document.txt
src/: main.rs
templates/: directory.html
test_folder/: sub_test.txt
