[package]
name = "httpsync"
version = "0.1.1"
edition = "2021"
authors = ["Alex <alex@example.com>"]
description = "A modern LAN file sharing tool with drag-and-drop upload and responsive design"
license = "MIT"
repository = "https://github.com/yourusername/ru-http-sync"
homepage = "https://github.com/yourusername/ru-http-sync"
documentation = "https://docs.rs/httpsync"
keywords = ["http", "server", "file-sharing", "lan", "upload"]
categories = ["web-programming::http-server", "command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4",features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
serde = { version = "1.0.195", features = ["derive"] }
futures-util = "0.3.30"
tera = "1.19"
